[package]
name = "tailpipe"
version = "0.1.0"
edition = "2024"

[dependencies]
russh = { version = "0.57", default-features = false, features = ["ring", "rsa"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
ratatui = "0.30"

[dev-dependencies]
tempfile = "3"
